# gemini-mcp-server

./: .gitignore  Dockerfile  README.md  pyproject.toml
examples/: gemini.py  test_remote.py
src/gemini_mcp/: auth.py  config.py  server.py  tools.py  utils.py
tests/: test_config.py  test_grounding_fix.py  test_integration.py  test_new_functionality.py  test_tools.py
