[project]
name = "gemini-mcp"
version = "0.1.0"
description = "A simple Gemini MCP server"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Philipp Schmid" }]
license = { text = "MIT" }
dependencies = [
    "mcp",
    "fastmcp",
    "google-genai",
]

[project.scripts]
gemini-mcp = "gemini_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_mcp"]

[tool.uv]
dev-dependencies = ["pyright>=1.1.391", "pytest>=8.3.4", "ruff>=0.8.5", "pytest-asyncio"]